create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">create a web page</a></section><section class="carousel slide cid-qYtPbR7i8P" data-interval="false" id="slider1-7">
+<section class="engine"><a href="https://mobiri.se/c">free web builder</a></section><section class="carousel slide cid-qYtPbR7i8P" data-interval="false" id="slider1-7">
 
     
 
@@ -214,7 +214,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JnecoTpMOuBSD9nqqxspV5qjxT9tzxctAs1C2kNhQGfxyD9IuI04f0G5+jnb4dAJPf/y7x5RsdMwIOf1Klv3p+BS1KeLy36DHB5n3jMmn5jCrrDQB+3qb4FY+LqEk2Bj" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DSbEteNDhvhh27OzgowmJqDlIAmiwQcBxJo3puA8ga0UJ78l4Z4yt6U1vN89BdsjrKDdAVWTKiT924e6VGOFD/Sk89216jrZOEgutrxFZ6gOolYJemDZkLnsvV6cEO7J" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
