--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/c">free web builder</a></section><section class="carousel slide cid-qYtPbR7i8P" data-interval="false" id="slider1-7">
+<section class="engine"><a href="https://mobiri.se/y">free html website templates</a></section><section class="carousel slide cid-qYtPbR7i8P" data-interval="false" id="slider1-7">
 
     
 
@@ -214,7 +214,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DSbEteNDhvhh27OzgowmJqDlIAmiwQcBxJo3puA8ga0UJ78l4Z4yt6U1vN89BdsjrKDdAVWTKiT924e6VGOFD/Sk89216jrZOEgutrxFZ6gOolYJemDZkLnsvV6cEO7J" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="En5cdjuIewNHLtzNbBZ6/NsvftLUe5KhqHQy15ygiPMN4O0xbr5YqbyCpaCBuPrERXEdNOD6O/2JbllewGHy+Pe9fJX0QA6T8cWefrXam3+CJzuidp2yqGqNEYpylAgR" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
